# AdventOfCode2025

./: .gitignore  CMakeLists.txt
01_secret_entrance/: 01_secret_entrance_a.cpp  01_secret_entrance_b.cpp  CMakeLists.txt
02_gift_shop/: 02_gift_shop_a.cpp  02_gift_shop_b.cpp  CMakeLists.txt
03_lobby/: 03_lobby_a.cpp  03_lobby_b.cpp  CMakeLists.txt
04_printing_department/: 04_printing_department_a.cpp  04_printing_department_b.cpp  04_printing_department_extra.cpp  CMakeLists.txt
05_cafeteria/: 05_cafeteria_a.cpp  05_cafeteria_b.cpp  CMakeLists.txt
06_trash_compactor/: 06_trash_compactor_a.cpp  06_trash_compactor_b.cpp  CMakeLists.txt
07_laboratories/: 07_laboratories_a.cpp  07_laboratories_b.cpp  CMakeLists.txt
08_playground/: 08_playground_a.cpp  08_playground_b.cpp  CMakeLists.txt
09_movie_theater/: 09_movie_theater_a.cpp  09_movie_theater_b.cpp  CMakeLists.txt
10_factory/: 10_factory_a.cpp  10_factory_b.cpp  CMakeLists.txt
11_reactor/: 11_reactor_a.cpp  11_reactor_b.cpp  CMakeLists.txt
12_christmas_tree_farm/: 12_christmas_tree_farm_a.cpp  12_christmas_tree_farm_b.cpp  CMakeLists.txt
shared/: fileutils.hpp  stringutils.hpp
